// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. date and times publication 1`] = `
<View
  style={
    Object {
      "flexDirection": "row",
    }
  }
>
  <Text
    style={Object {}}
    testID="date-time"
  >
    Saturday July 01 2017, 5.32am
  </Text>
  <Text
    style={Object {}}
    testID="publication-name"
  >
    , The Times
  </Text>
</View>
`;

exports[`2. date and sundaytimes publication 1`] = `
<View
  style={
    Object {
      "flexDirection": "row",
    }
  }
>
  <Text
    style={Object {}}
    testID="date-time"
  >
    Saturday July 01 2017, 5.32am
  </Text>
  <Text
    style={Object {}}
    testID="publication-name"
  >
    , The Sunday Times
  </Text>
</View>
`;

exports[`3. date and no given publication 1`] = `
<View
  style={
    Object {
      "flexDirection": "row",
    }
  }
>
  <Text
    style={Object {}}
    testID="date-time"
  >
    Saturday July 01 2017, 5.32am
  </Text>
</View>
`;

exports[`4. date and no day 1`] = `
<View
  style={
    Object {
      "flexDirection": "row",
    }
  }
>
  <Text
    style={Object {}}
    testID="date-time"
  >
    July 01 2017, 5.32am
  </Text>
</View>
`;
